Update feature descriptions and icons for improved clarity and appeal

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -75,43 +75,43 @@
     }
   },
   "features": {
-    "title": "Powerful Features",
-    "subtitle": "Stop wrestling with deployment pipelines and build configurations. Kliv handles the technical complexity so you can focus on creating.",
+    "title": "Everything Your App Needs",
+    "subtitle": "Build complete applications with user accounts, data storage, file uploads, and email — all managed by AI. No technical setup required.",
+    "userAccounts": {
+      "title": "User Accounts & Login",
+      "description": "Add user registration, login, and password recovery to your app. Secure authentication built-in and ready to use."
+    },
+    "database": {
+      "title": "Store Your Data",
+      "description": "Save and organize your app's information. Lists, forms, user profiles — the AI sets up the database automatically."
+    },
+    "fileUploads": {
+      "title": "File Uploads & Images",
+      "description": "Let users upload profile pictures, documents, or photos. Automatic image optimization and secure file storage included."
+    },
+    "email": {
+      "title": "Send Emails",
+      "description": "Send welcome emails, notifications, or password resets. Email templates and delivery handled for you."
+    },
     "hosting": {
       "title": "Hosting Included",
-      "description": "No servers to manage, no deployment headaches. Your app goes live instantly with lightning-fast global CDN."
+      "description": "Your app goes live instantly at your own web address. Fast, reliable hosting with nothing to configure."
     },
     "domain": {
-      "title": "Your Own Domain",
-      "description": "Connect your custom domain with one click. Professional URLs that reflect your brand."
-    },
-    "github": {
-      "title": "GitHub Sync",
-      "description": "Keep your source code safe. Enable GitHub syncing to maintain full ownership and version history."
-    },
-    "ai": {
-      "title": "AI Builds For You",
-      "description": "Describe your vision and watch it come to life. Our AI understands your requirements and creates production-ready code."
-    },
-    "editing": {
-      "title": "Code & Preview",
-      "description": "Edit your source code directly if you want. See results instantly with live preview - no refresh needed."
-    },
-    "snapshots": {
-      "title": "Time Travel",
-      "description": "Every change is snapshotted. Made a mistake? Go back to any previous version with one click."
+      "title": "Custom Domain",
+      "description": "Use your own domain name like www.yourbusiness.com. Professional addresses that build trust with your users."
     },
     "mobile": {
-      "title": "Mobile First",
-      "description": "Built responsive from the ground up. Your apps look perfect on every device, every time."
+      "title": "Works on Any Device",
+      "description": "Your app automatically adapts to phones, tablets, and computers. Perfect display on every screen size."
     },
-    "teamInvite": {
+    "team": {
       "title": "Team Collaboration", 
-      "description": "Invite multiple team members to collaborate on your projects. Work together seamlessly with shared access and real-time updates."
+      "description": "Work together with your team. Multiple people can build and manage your app with different permission levels."
     },
-    "roleAccess": {
-      "title": "Role-Based Permissions",
-      "description": "Control who can view, edit, or publish your projects with granular role-based access controls for secure team collaboration."
+    "ai": {
+      "title": "AI Does the Building",
+      "description": "Just describe what you want in plain language. The AI handles all the technical work to make it happen."
     },
     "page": {
       "badge": "Features",
