--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -75,43 +75,43 @@
     }
   },
   "features": {
-    "title": "強力な機能",
-    "subtitle": "デプロイメントパイプラインやビルド設定に悩む必要はありません。Klivが技術的な複雑さを処理し、あなたは創造に集中できます。",
+    "title": "アプリに必要なすべて",
+    "subtitle": "ユーザーアカウント、データストレージ、ファイルアップロード、メールを備えた完全なアプリケーションを構築 — すべてAIが管理します。技術的なセットアップは不要です。",
+    "userAccounts": {
+      "title": "ユーザーアカウント＆ログイン",
+      "description": "アプリにユーザー登録、ログイン、パスワード回復機能を追加。安全な認証が組み込まれ、すぐに使用できます。"
+    },
+    "database": {
+      "title": "データを保存",
+      "description": "アプリの情報を保存・整理します。リスト、フォーム、ユーザープロフィール — AIが自動的にデータベースをセットアップします。"
+    },
+    "fileUploads": {
+      "title": "ファイルアップロード＆画像",
+      "description": "ユーザーがプロフィール写真、ドキュメント、写真をアップロードできるようにします。自動画像最適化と安全なファイルストレージ付き。"
+    },
+    "email": {
+      "title": "メール送信",
+      "description": "ウェルカムメール、通知、パスワードリセットを送信します。メールテンプレートと配信があなたのために処理されます。"
+    },
     "hosting": {
       "title": "ホスティング込み",
-      "description": "サーバー管理なし、デプロイメントの頭痛なし。アプリは高速グローバルCDNで瞬時にライブになります。"
+      "description": "あなたのアプリは独自のウェブアドレスで瞬時にライブになります。設定不要の高速で信頼性の高いホスティング。"
     },
     "domain": {
-      "title": "独自ドメイン",
-      "description": "ワンクリックでカスタムドメインを接続。ブランドを反映するプロフェッショナルなURL。"
-    },
-    "github": {
-      "title": "GitHub同期",
-      "description": "ソースコードを安全に保管。GitHub同期を有効にして完全な所有権とバージョン履歴を維持。"
-    },
-    "ai": {
-      "title": "AIがあなたのために構築",
-      "description": "ビジョンを説明すれば実現します。私たちのAIはあなたの要件を理解し、本番対応のコードを作成します。"
-    },
-    "editing": {
-      "title": "コード&プレビュー",
-      "description": "必要に応じてソースコードを直接編集。ライブプレビューで結果を瞬時に確認 - リフレッシュ不要。"
-    },
-    "snapshots": {
-      "title": "タイムトラベル",
-      "description": "すべての変更がスナップショット化されます。間違いを犯した？ワンクリックで以前のバージョンに戻れます。"
+      "title": "カスタムドメイン",
+      "description": "www.yourbusiness.comのような独自のドメイン名を使用します。ユーザーの信頼を築くプロフェッショナルなアドレス。"
     },
     "mobile": {
-      "title": "モバイルファースト",
-      "description": "基盤からレスポンシブに構築。アプリはあらゆるデバイスで毎回完璧に表示されます。"
+      "title": "あらゆるデバイスで動作",
+      "description": "アプリは電話、タブレット、コンピューターに自動的に適応します。すべての画面サイズで完璧な表示。"
     },
-    "teamInvite": {
-      "title": "チーム コラボレーション",
-      "description": "複数のチームメンバーをプロジェクトに招待して共同作業。共有アクセスとリアルタイム更新でシームレスに協働できます。"
+    "team": {
+      "title": "チームコラボレーション", 
+      "description": "チームと一緒に作業します。複数の人が異なる権限レベルでアプリを構築・管理できます。"
     },
-    "roleAccess": {
-      "title": "役割ベースの権限",
-      "description": "安全なチーム協働のため、きめ細かい役割ベースのアクセス制御でプロジェクトの表示、編集、公開権限をコントロール。"
+    "ai": {
+      "title": "AIが構築を担当",
+      "description": "何が欲しいかを日本語で説明するだけ。AIがすべての技術作業を処理して実現させます。"
     },
     "page": {
       "badge": "機能",
