--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -75,43 +75,43 @@
     }
   },
   "features": {
-    "title": "Kraftfulla funktioner",
-    "subtitle": "Sluta brottas med distributionspipelines och byggkonfigurationer. Kliv hanterar den tekniska komplexiteten så att du kan fokusera på att skapa.",
+    "title": "Allt din app behöver",
+    "subtitle": "Bygg kompletta applikationer med användarkonton, datalagring, filuppladdning och e-post — allt hanterat av AI. Ingen teknisk installation krävs.",
+    "userAccounts": {
+      "title": "Användarkonton & inloggning",
+      "description": "Lägg till användarregistrering, inloggning och lösenordsåterställning i din app. Säker autentisering inbyggd och redo att använda."
+    },
+    "database": {
+      "title": "Lagra din data",
+      "description": "Spara och organisera din apps information. Listor, formulär, användarprofiler — AI:n sätter upp databasen automatiskt."
+    },
+    "fileUploads": {
+      "title": "Filuppladdning & bilder",
+      "description": "Låt användare ladda upp profilbilder, dokument eller foton. Automatisk bildoptimering och säker fillagring inkluderad."
+    },
+    "email": {
+      "title": "Skicka e-post",
+      "description": "Skicka välkomstmejl, notifieringar eller lösenordsåterställningar. E-postmallar och leverans hanteras åt dig."
+    },
     "hosting": {
       "title": "Hosting inkluderad",
-      "description": "Inga servrar att hantera, inga distributionsproblem. Din app går live direkt med blixtsnabb global CDN."
+      "description": "Din app går live direkt på din egen webbadress. Snabb, pålitlig hosting utan något att konfigurera."
     },
     "domain": {
-      "title": "Din egen domän",
-      "description": "Anslut din anpassade domän med ett klick. Professionella URL:er som återspeglar ditt varumärke."
-    },
-    "github": {
-      "title": "GitHub-synkronisering",
-      "description": "Håll din källkod säker. Aktivera GitHub-synkronisering för att behålla fullständig äganderätt och versionshistorik."
-    },
-    "ai": {
-      "title": "AI bygger åt dig",
-      "description": "Beskriv din vision och se den komma till liv. Vår AI förstår dina krav och skapar produktionsklar kod."
-    },
-    "editing": {
-      "title": "Kod & förhandsgranskning",
-      "description": "Redigera din källkod direkt om du vill. Se resultat direkt med live förhandsgranskning - ingen uppdatering behövs."
-    },
-    "snapshots": {
-      "title": "Tidsresor",
-      "description": "Varje ändring sparas som ögonblicksbild. Gjorde ett misstag? Gå tillbaka till vilken tidigare version som helst med ett klick."
+      "title": "Anpassad domän",
+      "description": "Använd ditt eget domännamn som www.dittföretag.se. Professionella adresser som bygger förtroende hos dina användare."
     },
     "mobile": {
-      "title": "Mobil först",
-      "description": "Byggd responsivt från grunden. Dina appar ser perfekta ut på alla enheter, varje gång."
+      "title": "Fungerar på alla enheter",
+      "description": "Din app anpassar sig automatiskt till telefoner, surfplattor och datorer. Perfekt visning på alla skärmstorlekar."
     },
-    "teamInvite": {
-      "title": "Teamsamarbete",
-      "description": "Bjud in flera teammedlemmar att samarbeta på dina projekt. Arbeta tillsammans sömlöst med delad åtkomst och realtidsuppdateringar."
+    "team": {
+      "title": "Teamsamarbete", 
+      "description": "Arbeta tillsammans med ditt team. Flera personer kan bygga och hantera din app med olika behörighetsnivåer."
     },
-    "roleAccess": {
-      "title": "Rollbaserade behörigheter", 
-      "description": "Kontrollera vem som kan visa, redigera eller publicera dina projekt med granulära rollbaserade åtkomstkontroller för säkert teamsamarbete."
+    "ai": {
+      "title": "AI gör byggjobbet",
+      "description": "Beskriv bara vad du vill på vanlig svenska. AI:n hanterar allt tekniskt arbete för att göra det verklighet."
     },
     "page": {
       "badge": "Funktioner",
