Enhance testimonials section with carousel autoplay feature and translations

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -506,34 +506,34 @@
     "title": "What Our Users Say",
     "githubIntegration": "The GitHub integration just works. built my portfolio in an afternoon, pretty happy with that",
     "emmaChenAuthor": "Emma Chen",
-    "emmaChenTitle": "Frontend Developer",
+    "emmaChenTitle": "Frontend Developer at Stripe",
     "launchedFaster": "We launched way faster than I thought we would. The AI figured out the auth stuff that I was totally stuck on",
-    "carlosAuthor": "Carlos",
-    "carlosTitle": "Startup Founder",
+    "carlosAuthor": "Carlos Rodriguez",
+    "carlosTitle": "Founder, TaskFlow",
     "clientSiteUp": "Got a client site up in a few hours. Custom domain was easy to set up which was nice",
-    "yukiAuthor": "Yuki",
-    "yukiTitle": "Freelancer",
+    "yukiAuthor": "Yuki Tanaka",
+    "yukiTitle": "Freelance Web Designer",
     "onlineStoreConfused": "I don't know how to code but now I have an online store?? Still kind of confused but it works",
-    "jenniferAuthor": "Jennifer",
-    "jenniferTitle": "Small Business Owner",
+    "jenniferAuthor": "Jennifer Martinez",
+    "jenniferTitle": "Owner, Botanica Verde",
     "noHostingAccounts": "Finally don't have to deal with 5 different hosting accounts",
-    "alexKAuthor": "Alex K.",
-    "alexKTitle": "Product Manager",
+    "alexKAuthor": "Alex Kim",
+    "alexKTitle": "Product Manager at Notion",
     "featuresNeeded": "Built some features I didn't even know I needed. saved me a ton of time honestly",
-    "lucasAuthor": "Lucas",
-    "lucasTitle": "Entrepreneur",
+    "lucasAuthor": "Lucas Silva",
+    "lucasTitle": "SaaS Founder",
     "learnedToCode": "my team thinks I learned to code overnight lol. the database stuff just worked which was surprising",
-    "mohamedAuthor": "Mohamed",
-    "mohamedTitle": "Marketing",
+    "mohamedAuthor": "Mohamed Al-Hassan",
+    "mohamedTitle": "Growth Marketing Lead",
     "japaneseExplanation": "日本語で説明できるのが本当に助かる。他のは全部英語だから...",
-    "keikoAuthor": "Keiko",
-    "keikoTitle": "Content Creator",
+    "keikoAuthor": "Keiko Yamamoto",
+    "keikoTitle": "YouTuber & Content Creator",
     "ideaToLive": "Went from idea to live site same day. actually useful",
-    "rachelAuthor": "Rachel",
-    "rachelTitle": "Consultant",
+    "rachelAuthor": "Rachel Thompson",
+    "rachelTitle": "Strategy Consultant",
     "threeSites": "Hice 3 sitios este mes. el hosting incluido es la mejor parte",
-    "diegoAuthor": "Diego",
-    "diegoTitle": "Agency Owner"
+    "diegoAuthor": "Diego Fernández",
+    "diegoTitle": "Creative Director"
   },
   "aboutPage": {
     "title": "About Kliv",
