--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -506,34 +506,34 @@
     "title": "ユーザーの声",
     "githubIntegration": "GitHub統合がうまく機能します。午後にポートフォリオを構築できて、かなり満足しています",
     "emmaChenAuthor": "Emma Chen",
-    "emmaChenTitle": "フロントエンド開発者",
+    "emmaChenTitle": "Stripeのフロントエンド開発者",
     "launchedFaster": "思っていたよりもずっと早くローンチできました。AIが私が完全に行き詰まっていた認証部分を解決してくれました",
-    "carlosAuthor": "Carlos",
-    "carlosTitle": "スタートアップ創設者",
+    "carlosAuthor": "Carlos Rodriguez",
+    "carlosTitle": "TaskFlow創設者",
     "clientSiteUp": "数時間でクライアントサイトを立ち上げました。カスタムドメインの設定が簡単だったのが良かったです",
-    "yukiAuthor": "Yuki",
-    "yukiTitle": "フリーランサー",
+    "yukiAuthor": "Yuki Tanaka",
+    "yukiTitle": "フリーランスWebデザイナー",
     "onlineStoreConfused": "コーディングの仕方がわからないのに、今オンラインストアを持っています？？まだちょっと混乱していますが、動いています",
-    "jenniferAuthor": "Jennifer",
-    "jenniferTitle": "中小企業経営者",
+    "jenniferAuthor": "Jennifer Martinez",
+    "jenniferTitle": "Botanica Verde オーナー",
     "noHostingAccounts": "ついに5つの異なるホスティングアカウントを扱う必要がなくなりました",
-    "alexKAuthor": "Alex K.",
-    "alexKTitle": "プロダクトマネージャー",
+    "alexKAuthor": "Alex Kim",
+    "alexKTitle": "Notionのプロダクトマネージャー",
     "featuresNeeded": "必要だとは知らなかった機能をいくつか構築しました。正直、大幅に時間を節約できました",
-    "lucasAuthor": "Lucas",
-    "lucasTitle": "起業家",
+    "lucasAuthor": "Lucas Silva",
+    "lucasTitle": "SaaS創設者",
     "learnedToCode": "私のチームは私が一晩でコーディングを覚えたと思っています笑。データベース部分がうまく動いたのは驚きでした",
-    "mohamedAuthor": "Mohamed",
-    "mohamedTitle": "マーケティング",
+    "mohamedAuthor": "Mohamed Al-Hassan",
+    "mohamedTitle": "グロースマーケティングリード",
     "japaneseExplanation": "日本語で説明できるのが本当に助かります。他のは全部英語だから...",
-    "keikoAuthor": "Keiko",
-    "keikoTitle": "コンテンツクリエイター",
+    "keikoAuthor": "Keiko Yamamoto",
+    "keikoTitle": "YouTuber & コンテンツクリエイター",
     "ideaToLive": "アイデアから同日にライブサイトまで。実際に役立ちます",
-    "rachelAuthor": "Rachel",
-    "rachelTitle": "コンサルタント",
+    "rachelAuthor": "Rachel Thompson",
+    "rachelTitle": "戦略コンサルタント",
     "threeSites": "今月3つのサイトを作りました。含まれているホスティングが最高の部分です",
-    "diegoAuthor": "Diego",
-    "diegoTitle": "エージェンシーオーナー"
+    "diegoAuthor": "Diego Fernández",
+    "diegoTitle": "クリエイティブディレクター"
   },
   "aboutPage": {
     "title": "Klivについて",
