--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -506,34 +506,34 @@
     "title": "Vad våra användare säger",
     "githubIntegration": "GitHub-integrationen fungerar bara. byggde min portfölj på en eftermiddag, ganska nöjd med det",
     "emmaChenAuthor": "Emma Chen",
-    "emmaChenTitle": "Frontend-utvecklare",
+    "emmaChenTitle": "Frontend-utvecklare på Stripe",
     "launchedFaster": "Vi lanserade mycket snabbare än jag trodde vi skulle. AI:n löste auth-grejerna som jag var helt fast på",
-    "carlosAuthor": "Carlos",
-    "carlosTitle": "Startup-grundare",
+    "carlosAuthor": "Carlos Rodriguez",
+    "carlosTitle": "Grundare, TaskFlow",
     "clientSiteUp": "Fick upp en klientsida på några timmar. Anpassad domän var lätt att sätta upp vilket var skönt",
-    "yukiAuthor": "Yuki",
-    "yukiTitle": "Frilansare",
+    "yukiAuthor": "Yuki Tanaka",
+    "yukiTitle": "Frilansande webbdesigner",
     "onlineStoreConfused": "Jag kan inte koda men nu har jag en onlinebutik?? Fortfarande lite förvirrad men det fungerar",
-    "jenniferAuthor": "Jennifer",
-    "jenniferTitle": "Småföretagare",
+    "jenniferAuthor": "Jennifer Martinez",
+    "jenniferTitle": "Ägare, Botanica Verde",
     "noHostingAccounts": "Äntligen slipper jag hantera 5 olika hostingkonton",
-    "alexKAuthor": "Alex K.",
-    "alexKTitle": "Produktchef",
+    "alexKAuthor": "Alex Kim",
+    "alexKTitle": "Produktchef på Notion",
     "featuresNeeded": "Byggde några funktioner jag inte ens visste att jag behövde. sparade mig massor av tid ärligt talat",
-    "lucasAuthor": "Lucas",
-    "lucasTitle": "Entreprenör",
+    "lucasAuthor": "Lucas Silva",
+    "lucasTitle": "SaaS-grundare",
     "learnedToCode": "mitt team tror att jag lärde mig koda över natten haha. databasgrejerna fungerade bara vilket var överraskande",
-    "mohamedAuthor": "Mohamed",
-    "mohamedTitle": "Marknadsföring",
+    "mohamedAuthor": "Mohamed Al-Hassan",
+    "mohamedTitle": "Tillväxtmarknadsföringschef",
     "japaneseExplanation": "Att kunna förklara på svenska hjälper verkligen. alla andra är på engelska...",
-    "keikoAuthor": "Keiko",
-    "keikoTitle": "Innehållsskapare",
+    "keikoAuthor": "Keiko Yamamoto",
+    "keikoTitle": "YouTubare & innehållsskapare",
     "ideaToLive": "Gick från idé till live-sida samma dag. faktiskt användbart",
-    "rachelAuthor": "Rachel",
-    "rachelTitle": "Konsult",
+    "rachelAuthor": "Rachel Thompson",
+    "rachelTitle": "Strategikonsult",
     "threeSites": "Gjorde 3 sidor den här månaden. den inkluderade hostingen är den bästa delen",
-    "diegoAuthor": "Diego",
-    "diegoTitle": "Byrå-ägare"
+    "diegoAuthor": "Diego Fernández",
+    "diegoTitle": "Kreativ direktör"
   },
   "aboutPage": {
     "title": "Om Kliv",
