Update user titles across multiple language locales

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -506,7 +506,7 @@
     "title": "What Our Users Say",
     "githubIntegration": "The GitHub integration just works. built my portfolio in an afternoon, pretty happy with that",
     "emmaChenAuthor": "Emma Chen",
-    "emmaChenTitle": "Frontend Developer at Stripe",
+    "emmaChenTitle": "Frontend Developer",
     "launchedFaster": "We launched way faster than I thought we would. The AI figured out the auth stuff that I was totally stuck on",
     "carlosAuthor": "Carlos Rodriguez",
     "carlosTitle": "Founder, TaskFlow",
@@ -518,7 +518,7 @@
     "jenniferTitle": "Owner, Botanica Verde",
     "noHostingAccounts": "Finally don't have to deal with 5 different hosting accounts",
     "alexKAuthor": "Alex Kim",
-    "alexKTitle": "Product Manager at Notion",
+    "alexKTitle": "Product Manager",
     "featuresNeeded": "Built some features I didn't even know I needed. saved me a ton of time honestly",
     "lucasAuthor": "Lucas Silva",
     "lucasTitle": "SaaS Founder",
