--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -506,7 +506,7 @@
     "title": "ユーザーの声",
     "githubIntegration": "GitHub統合がうまく機能します。午後にポートフォリオを構築できて、かなり満足しています",
     "emmaChenAuthor": "Emma Chen",
-    "emmaChenTitle": "Stripeのフロントエンド開発者",
+    "emmaChenTitle": "フロントエンド開発者",
     "launchedFaster": "思っていたよりもずっと早くローンチできました。AIが私が完全に行き詰まっていた認証部分を解決してくれました",
     "carlosAuthor": "Carlos Rodriguez",
     "carlosTitle": "TaskFlow創設者",
@@ -518,7 +518,7 @@
     "jenniferTitle": "Botanica Verde オーナー",
     "noHostingAccounts": "ついに5つの異なるホスティングアカウントを扱う必要がなくなりました",
     "alexKAuthor": "Alex Kim",
-    "alexKTitle": "Notionのプロダクトマネージャー",
+    "alexKTitle": "プロダクトマネージャー",
     "featuresNeeded": "必要だとは知らなかった機能をいくつか構築しました。正直、大幅に時間を節約できました",
     "lucasAuthor": "Lucas Silva",
     "lucasTitle": "SaaS創設者",
