--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -506,7 +506,7 @@
     "title": "Vad våra användare säger",
     "githubIntegration": "GitHub-integrationen fungerar bara. byggde min portfölj på en eftermiddag, ganska nöjd med det",
     "emmaChenAuthor": "Emma Chen",
-    "emmaChenTitle": "Frontend-utvecklare på Stripe",
+    "emmaChenTitle": "Frontend-utvecklare",
     "launchedFaster": "Vi lanserade mycket snabbare än jag trodde vi skulle. AI:n löste auth-grejerna som jag var helt fast på",
     "carlosAuthor": "Carlos Rodriguez",
     "carlosTitle": "Grundare, TaskFlow",
@@ -518,7 +518,7 @@
     "jenniferTitle": "Ägare, Botanica Verde",
     "noHostingAccounts": "Äntligen slipper jag hantera 5 olika hostingkonton",
     "alexKAuthor": "Alex Kim",
-    "alexKTitle": "Produktchef på Notion",
+    "alexKTitle": "Produktchef",
     "featuresNeeded": "Byggde några funktioner jag inte ens visste att jag behövde. sparade mig massor av tid ärligt talat",
     "lucasAuthor": "Lucas Silva",
     "lucasTitle": "SaaS-grundare",
