--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -75,6 +75,7 @@
     }
   },
   "features": {
+    "badge": "完全なバックエンド付き",
     "title": "アプリに必要なすべて",
     "subtitle": "ユーザーアカウント、データストレージ、ファイルアップロード、メールを備えた完全なアプリケーションを構築 — すべてAIが管理します。技術的なセットアップは不要です。",
     "userAccounts": {
@@ -210,6 +211,7 @@
       },
       "technology": {
         "title": "技術スタック",
+        "subtitle": "品質、パフォーマンス、保守性を保証する業界をリードする技術で構築",
         "react": {
           "title": "React & TypeScript",
           "description": "最新のReactとTypeScriptで構築され、プロジェクトと共にスケールする型安全で保守可能なコード。"
@@ -221,6 +223,46 @@
         "shadcn": {
           "title": "Shadcn/uiコンポーネント",
           "description": "モダンなデザイン原則とベストプラクティスに従った、事前構築されたアクセシブルなコンポーネント。"
+        }
+      },
+      "highlights": {
+        "automaticSetup": {
+          "title": "自動セットアップ",
+          "description": "AIがデータベース、機能、アクセス制御を作成"
+        },
+        "enterpriseSecurity": {
+          "title": "エンタープライズセキュリティ",
+          "description": "行レベルセキュリティ、暗号化、監査証跡"
+        },
+        "visualAdmin": {
+          "title": "ビジュアル管理",
+          "description": "データ管理、機能監視、コード不要"
+        },
+        "globalReplication": {
+          "title": "グローバルレプリケーション",
+          "description": "自動バックアップ付きの高速で信頼性の高いデータベース"
+        }
+      },
+      "coreDetails": {
+        "aiChat": {
+          "point1": "複雑な機能を平易な言葉で説明し、それが実現される様子を見る",
+          "point2": "会話を通じて自然に反復 — 技術文書は不要",
+          "point3": "データベース、API、認証、複雑なビジネスロジックに対応"
+        },
+        "livePreview": {
+          "point1": "Tailwind CSSでスタイル付けされたプロフェッショナルなUIコンポーネントをすぐに利用",
+          "point2": "モバイル、タブレット、デスクトップで完璧に動作する完全レスポンシブレイアウト",
+          "point3": "包括的なユーザー体験のためのWCAGガイドラインに従ったアクセシブルなコンポーネント"
+        },
+        "codeGeneration": {
+          "point1": "変更を加えるとライブプレビューが瞬時に更新 — リアルタイムで結果を確認",
+          "point2": "ワークスペースから直接あらゆるデバイスやブラウザでテスト",
+          "point3": "高速な反復サイクルで待ち時間を減らし、創造性を高める"
+        },
+        "responsive": {
+          "point1": "自動GitHub統合でコードを安全にバージョン管理",
+          "point2": "どこにでも持ち運べるクリーンで保守可能なコード — ベンダーロックインなし",
+          "point3": "Reactアプリケーションをサポートするあらゆるホスティングプラットフォームにエクスポート・デプロイ"
         }
       }
     }
