--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -75,6 +75,7 @@
     }
   },
   "features": {
+    "badge": "Komplett backend inkluderad",
     "title": "Allt din app behöver",
     "subtitle": "Bygg kompletta applikationer med användarkonton, datalagring, filuppladdning och e-post — allt hanterat av AI. Ingen teknisk installation krävs.",
     "userAccounts": {
@@ -210,6 +211,7 @@
       },
       "technology": {
         "title": "Teknisk stack",
+        "subtitle": "Byggd på branschledande teknologier som säkerställer kvalitet, prestanda och underhållbarhet",
         "react": {
           "title": "React & TypeScript",
           "description": "Byggd med den senaste React och TypeScript för typsäker, underhållbar kod som skalar med ditt projekt."
@@ -221,6 +223,46 @@
         "shadcn": {
           "title": "Shadcn/ui-komponenter",
           "description": "Förbyggda, tillgängliga komponenter som följer moderna designprinciper och bästa praxis."
+        }
+      },
+      "highlights": {
+        "automaticSetup": {
+          "title": "Automatisk installation",
+          "description": "AI skapar din databas, funktioner och åtkomstkontroll"
+        },
+        "enterpriseSecurity": {
+          "title": "Företagssäkerhet",
+          "description": "Säkerhet på radnivå, kryptering och revisionsspår"
+        },
+        "visualAdmin": {
+          "title": "Visuell administration",
+          "description": "Hantera data, övervaka funktioner, ingen kod krävs"
+        },
+        "globalReplication": {
+          "title": "Global replikering",
+          "description": "Snabb, pålitlig databas med automatiska säkerhetskopior"
+        }
+      },
+      "coreDetails": {
+        "aiChat": {
+          "point1": "Beskriv komplexa funktioner på vanligt språk och se dem komma till liv",
+          "point2": "Iterera naturligt genom konversation — ingen teknisk dokumentation behövs",
+          "point3": "Fungerar med databaser, API:er, autentisering och komplex affärslogik"
+        },
+        "livePreview": {
+          "point1": "Professionella UI-komponenter stilade med Tailwind CSS direkt ur lådan",
+          "point2": "Helt responsiva layouter som fungerar perfekt på mobil, surfplatta och skrivbord",
+          "point3": "Tillgängliga komponenter som följer WCAG-riktlinjer för inkluderande användarupplevelser"
+        },
+        "codeGeneration": {
+          "point1": "Live förhandsvisning uppdateras direkt när du gör ändringar — se resultat i realtid",
+          "point2": "Testa på vilken enhet eller webbläsare som helst direkt från din arbetsyta",
+          "point3": "Snabba iterationscykler betyder mindre väntan, mer skapande"
+        },
+        "responsive": {
+          "point1": "Automatisk GitHub-integration håller din kod säker och versionskontrollerad",
+          "point2": "Ren, underhållbar kod du kan ta med dig överallt — ingen leverantörslåsning",
+          "point3": "Exportera och distribuera till vilken hostingplattform som helst som stöder React-applikationer"
         }
       }
     }
