--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -273,9 +273,9 @@
     "subtitle": "無料で構築を開始し、より多くの機能が必要になったらアップグレード",
     "errorLoading": "料金情報の読み込みエラー",
     "noPlansAvailable": "現在利用可能なプランはありません。",
-    "getStarted": "始める",
-    "subscribe": "購読",
-    "contactUs": "お問い合わせ",
+    "getStarted": "無料で始める",
+    "subscribe": "構築開始",
+    "contactUs": "営業にお問い合わせ",
     "free": "無料",
     "custom": "カスタム",
     "customPricing": "カスタム料金",
@@ -294,7 +294,34 @@
     "testPlan": "これはテストプランです",
     "test": "テスト",
     "signupsDisabled": "このプランの登録は無効になっています",
-    "disabled": "無効"
+    "disabled": "無効",
+    "faq": {
+      "title": "よくある質問",
+      "q1": {
+        "question": "エージェンティッククレジットとは何ですか？",
+        "answer": "エージェンティッククレジットは、アプリを構築するAIを動かします。各クレジットで、AIはプロジェクトに1つの変更を加えることができます。ほとんどの機能は構築に5～15クレジットかかります。クレジットは毎日補充されます。"
+      },
+      "q2": {
+        "question": "いつでもキャンセルできますか？",
+        "answer": "はい、いつでもサブスクリプションをキャンセルできます。プランは請求期間の終了まで有効で、再度請求されることはありません。"
+      },
+      "q3": {
+        "question": "ダウングレードしたらアプリはどうなりますか？",
+        "answer": "アプリはオンラインのままで完全に機能します。構築したすべてのものへのアクセスは保持されます。ダウングレードは、毎日のクレジット割り当てとプレミアム機能にのみ影響します。"
+      },
+      "q4": {
+        "question": "返金はありますか？",
+        "answer": "すべての有料プランで14日間の返金保証を提供しています。最初の2週間以内にご満足いただけない場合は、全額返金いたします。"
+      },
+      "q5": {
+        "question": "プランをアップグレードまたはダウングレードできますか？",
+        "answer": "はい、いつでもプランを変更できます。アップグレードは即座に有効になります。ダウングレードは現在の請求サイクルの終了時に有効になります。"
+      },
+      "q6": {
+        "question": "エンタープライズプランには何が含まれますか？",
+        "answer": "エンタープライズプランには、専用インフラストラクチャ、カスタムSLA保証、優先サポート、SSO/SAML統合、高度なセキュリティ機能、チーム向けのボリュームディスカウントが含まれます。"
+      }
+    }
   },
   "billing": {
     "monthly": "月額",
@@ -422,10 +449,15 @@
       "400 credits / month": "400クレジット/月",
       "Custom": "カスタム"
     },
+    "descriptions": {
+      "Basic Access": "学習とサイドプロジェクトに最適",
+      "Professional": "本格的な製品を構築するクリエイター向け",
+      "Custom": "大規模なチームと企業向け"
+    },
     "features": {
-      "Basic Access": "* パブリックプロジェクト\n* 1日5クレジット\n* コミュニティサポート",
-      "Professional": "無料プランのすべて、さらに：\n* 無制限プロジェクト\n* 追加の日次クレジット\n* 優先サポート\n* カスタムドメイン\n* 無制限ユーザー",
-      "Custom": "* シングルサインオン（SAML）\n* カスタム統合\n* 専用サポート\n* SLA保証"
+      "Basic Access": "**構築を開始するために必要なすべて**\n\n✓ 無制限のパブリックプロジェクト\n✓ 1日10AIクレジット\n✓ React + TypeScript + Tailwind\n✓ ライブプレビュー＆コードエディタ\n✓ kliv.siteでの無料ホスティング\n✓ データベース＆認証\n✓ ファイルアップロード＆メール\n✓ コミュニティサポート\n✓ GitHubへエクスポート",
+      "Professional": "**無料プランのすべて、さらに：**\n\n✓ プライベートプロジェクト\n✓ 1日100+AIクレジット\n✓ カスタムドメイン (www.yourbiz.com)\n✓ 優先AI応答\n✓ Klivブランディング削除\n✓ チームコラボレーション\n✓ 優先サポート\n✓ 高度な分析\n✓ より速い構築時間\n✓ 拡張リビジョン履歴",
+      "Custom": "**プロフェッショナルのすべて、さらに：**\n\n✓ 専用プライベートエンクレーブ\n✓ カスタムクレジット割り当て\n✓ シングルサインオン（SAML/SSO）\n✓ 高度なセキュリティ＆コンプライアンス\n✓ 専任アカウントマネージャー\n✓ カスタムSLA保証\n✓ ボリュームディスカウント\n✓ オンプレミスデプロイオプション\n✓ カスタム統合＆API\n✓ トレーニング＆オンボーディング\n✓ 24/7優先サポート"
     }
   },
   "common": {
